# TypeRunner

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  enum.h
src/checker/: compiler.h  instructions.h  types.h  utils.h
src/gui/: app.h  debugger_main.cpp
src/tests/: CMakeLists.txt  test_hash.cpp  test_mem.cpp
